--- a/ts-node-express/.env
+++ b/ts-node-express/.env
@@ -1,2 +1,7 @@
-PORT=3000
-NODE_ENV=development
+PORT=4000
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=dinavelb
+DB_PASSWORD=binongofeb0206
+DB_DATABASE=mangodb
+NODE_ENV=dev
