--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node dist/config/database.js",
+    "dev": "ts-node src/app.ts",
+    "build": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.6",
-    "@types/node": "^25.1.0",
+    "@types/node": "^25.2.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "express": "^5.2.1",
@@ -21,5 +25,17 @@
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/memory-cache": "^0.2.6",
+    "bcrypt": "^6.0.0",
+    "concurrently": "^9.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "memory-cache": "^0.2.0",
+    "pg": "^8.18.0",
+    "pg-promise": "^12.5.0",
+    "typeorm": "^0.3.28"
   }
 }
