--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/config/database.js",
+    "start": "node dist/app.js",
     "dev": "ts-node src/app.ts",
     "build": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.0",
     "dotenv": "^17.2.3",
