--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "ts-node src/app.ts",
     "build": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node dist/config/test-conf.js",
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/app.ts\""
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "npm": "^11.8.0",
     "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "@types/memory-cache": "^0.2.6",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
+    "cors": "^2.8.6",
     "jsonwebtoken": "^9.0.3",
     "memory-cache": "^0.2.0",
     "pg": "^8.18.0",
