--- a/ts-node-express/.env
+++ b/ts-node-express/.env
@@ -5,3 +5,8 @@ DB_USERNAME=dinavelb
 DB_PASSWORD=binongofeb0206
 DB_DATABASE=mangodb
 NODE_ENV=dev
+
+#jwt
+JWT_SECRET=binongofeb0206
+JWT_EXPIRES_IN=1d
+JWT_ALGORITHM=HS256
