--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/app.js --watch",
     "build": "tsc --watch",
     "test": "node dist/config/test-conf.js",
     "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/app.ts\""
