--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/app.js --watch",
+    "start:redis": "node src/config/redis.config.ts",
     "build": "tsc --watch",
     "test": "node dist/config/test-conf.js",
     "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/app.ts\""
@@ -32,6 +33,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/memory-cache": "^0.2.6",
+    "@types/redis": "^4.0.10",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.6",
@@ -39,6 +41,7 @@
     "memory-cache": "^0.2.0",
     "pg": "^8.18.0",
     "pg-promise": "^12.5.0",
+    "redis": "^5.11.0",
     "typeorm": "^0.3.28"
   }
 }
