--- a/ts-node-express/package.json
+++ b/ts-node-express/package.json
@@ -30,12 +30,15 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@auth/express": "^0.12.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/memory-cache": "^0.2.6",
     "@types/redis": "^4.0.10",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "jsonwebtoken": "^9.0.3",
     "memory-cache": "^0.2.0",
